[gd_scene load_steps=8 format=3 uid="uid://bupiwrxnprwwt"]

[ext_resource type="Script" path="res://Boss1.gd" id="1_07vgm"]
[ext_resource type="Texture2D" uid="uid://j0pgqqieuenx" path="res://assets/HomeBrewed/Bat_sprite_sheet.png" id="2_ghwak"]

[sub_resource type="Animation" id="Animation_6yvhp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xv21y"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_diwso"]
_data = {
"RESET": SubResource("Animation_6yvhp"),
"idle": SubResource("Animation_xv21y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ne0c4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ha7vb"]
size = Vector2(20, 15)

[node name="Boss1" type="CharacterBody2D"]
script = ExtResource("1_07vgm")

[node name="BossSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ghwak")
hframes = 8
vframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_diwso")
}

[node name="PlayerDetectionArea" type="Area2D" parent="."]
visible = false
scale = Vector2(68.88, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
scale = Vector2(0.294478, 2.24649)
shape = SubResource("RectangleShape2D_ne0c4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
scale = Vector2(1, 1.8)
shape = SubResource("RectangleShape2D_ha7vb")

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
